# Raytracer

./: .gitignore  CMakeLists.txt  README.md
demo/: demo.cfg
demo/configs/: house.cfg  monke.cfg  motionblur.cfg  pirhana.cfg  rocket.cfg  sphere.cfg
include/: display.hpp
include/Math/: Matrix.hpp  Ray3D.hpp  Vector3D.hpp
lib/Color/: CMakeLists.txt
lib/Color/include/: Color.hpp
lib/Color/src/: Color.cpp
lib/Math/: CMakeLists.txt
lib/Math/include/: Matrix.hpp  Point3D.hpp  Ray3D.hpp  Rectangle3D.hpp  Vector3D.hpp
lib/Math/src/: Matrix.cpp  Point3D.cpp  Ray3D.cpp  Rectangle3D.cpp  Vector3D.cpp
plugins/dummyLight/: CMakeLists.txt
plugins/dummyLight/include/: ILight.hpp
plugins/dummyLight/include/Math/: Point3D.cpp  Point3D.hpp  Ray3D.hpp  Vector3D.hpp
plugins/dummyLight/include/Render/: Color.hpp
plugins/dummyLight/src/: DirectionalLight.cpp  DirectionalLight.hpp  EntryPoint.cpp
plugins/dummyObject/: CMakeLists.txt
plugins/dummyObject/include/: IObject.hpp
plugins/dummyObject/include/Math/: Point3D.hpp  Rectangle3D.hpp
plugins/dummyObject/src/: EntryPoint.cpp  Sphere.cpp  Sphere.hpp
src/: main.cpp
src/Factory/: Factory.cpp  Factory.hpp
src/LibHandler/: LibHandler.cpp  LibHandler.hpp
src/Light/: ILight.hpp
src/Light/Objects/: PointLight.cpp  PointLight.hpp
src/Math/: Matrix.cpp  Matrix.hpp  Point3D.cpp  Point3D.hpp  Ray3D.cpp  Ray3D.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Vector3D.cpp  Vector3D.hpp
src/Objects/: IObject.hpp
src/Objects/Advanced/: WavefontObject.cpp  WavefontObject.hpp
src/Objects/Primitives/: Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Output/: PPMOutput.cpp  PPMOutput.hpp
src/Parser/: ParseArg.cpp  ParseArg.hpp  Parser.cpp  Parser.hpp
src/Primitives/: IPrimitive.cpp  IPrimitive.hpp
src/Primitives/Objects/: Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp
src/Render/: Camera.cpp  Camera.hpp  Chunk.hpp  Color.cpp  Ray3D.cpp  Ray3D.hpp  RenderData.cpp  RenderData.hpp  RenderPoint.cpp  RenderPoint.hpp  RenderProcessWrapper.cpp  RenderProcessWrapper.hpp  RenderRay.cpp  RenderRay.hpp  Renderer.cpp  Renderer.hpp  Threads.cpp  Threads.hpp
src/Render/Editor/: Editor.cpp  Editor.hpp
src/Vectors/: Vector3D.cpp  Vector3D.hpp
src/sfml/: sfml.cpp  sfml.hpp
